Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33591

Bug in handling of US International Keyboard Layout on Windows

XMLWordPrintable

    • Qt 5: c15e8517ef877a141df7cd5d4767d19ac81e7c2e Qt 4: 157da36977213237939df14608753bb3ec280f0b

      When typing to for example QLineEdit, Qt assumes that dead key is on. This happens only when typing for the first time.

      Steps to reproduce:
      1) Set your keyboard layout to US international
      2) Compile and launch the layouts example
      3) Set your input to any text field in the example window
      4) Type in '6' (not from the numpad) then any other key. (we will take 'q' for example)

      Result is 6^q instead of 6q.

      Commit 68331c5436506b6f9b4c2a49692a09020e4eef27 introduced this problem, which fixed the bugs QTBUG-8764 and QTBUG-10032

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            qtcomsupport Qt Support
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes